# shape

./: LICENSE  README.md  dprint.json  package.json
.github/workflows/: style.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
